Fixes alignment of Home info component

--- a/src/components/layouts/HomeInfo/HomeInfo.scss
+++ b/src/components/layouts/HomeInfo/HomeInfo.scss
@@ -1,39 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 .info-wrapper {
-    .description {
-        width: 33%;
-        position: relative;
-        top: 15vh;
-        left: 10%;
-        color: var(--black);
-        font-family: 'Montserrat', sans-serif;
-        
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center; 
+    align-items: center; 
+    position: relative;
 
-        .title {
-            text-transform: uppercase;
-            letter-spacing: 0.2rem;
-            font-size: 20px;
-        }
+    .left-wrapper {
+        height: 100vh;
+        width: 50vw;
+        display: flex;
+        align-items: center;
+        .description {
+            color: var(--black);
+            font-family: 'Montserrat', sans-serif;
+            display: grid;
+            width: 60%;
+            margin: auto;
 
-        .subtitle {
-            font-size: 18px;
-            opacity: 0.6;
+            .info-title {
+                text-transform: uppercase;
+                letter-spacing: 0.2rem;
+                font-size: 20px;
+                font-weight: bold;
+                color: var(--black);
+                margin-bottom: 10px;
+                width: 90%;
+            }
+    
+            .info-subtitle {
+                font-size: 18px;
+                opacity: 0.6;
+            }
         }
     }
+    
 
     .separator {
         border-left: 2px solid var(--green);
         height: 70%;
         position: absolute;
-        left: 50%;
-        top: 115vh;
     }
 
-    .info-image {
-        width: 31%;
-        height: 80%;
-        position: relative;
-        top: -8vh;
-        left: 60%;
+    .right-wrapper {
+        height: 100vh;
+        width: 50vw;
+        display: flex;
+
+        .info-image {
+            height: 70%;
+            margin: auto;
+        }
     }
+    
 }
